[gd_scene load_steps=4 format=3 uid="uid://b1xd48a210722"]

[ext_resource type="Script" path="res://scenes/Game.gd" id="1_qf4lp"]
[ext_resource type="PackedScene" uid="uid://harceuo4vu7x" path="res://scenes/Player.tscn" id="1_xy0tq"]
[ext_resource type="Script" path="res://scenes/WorldManager.gd" id="2_mkyx7"]

[node name="Game" type="Node2D"]
script = ExtResource("1_qf4lp")

[node name="WorldManager" type="Node2D" parent="."]
script = ExtResource("2_mkyx7")

[node name="Player" parent="." instance=ExtResource("1_xy0tq")]
position = Vector2(2786, 1608)

[connection signal="map_loaded" from="WorldManager" to="." method="_on_world_manager_map_loaded"]
[connection signal="teleporter_hit" from="Player" to="." method="_on_player_teleporter_hit"]
